# unpacker

./: .gitignore  CMakeLists.txt  readme.md
attic/: CalibratedIntegral.cc  CalibratedIntegral.hh  ChannelConfig.cc  ChannelConfig.hh  CubicSpline.cxx  CubicSpline.hh  HistogramMaker.cc  HistogramMaker.hh  HodoscopeEvent.cc  HodoscopeEvent.hh  IntegralCluster.cc  IntegralCluster.hh  ODB.cc  ODB.hh  ODBParser.cc  ODBParser.hh  PileupTagger.cc  PileupTagger.hh  README.md  RFWaveform.cc  RFWaveform.hh  TemplateFitter.cxx  TemplateFitter.hh  WaveformFit.cc  WaveformFit.hh  WaveformFitter.cc  WaveformFitter.hh  WaveformIntegral.cc  WaveformIntegral.hh  env.yml
attic/calib/: calib.json  do_energy_timing_calibration.ipynb  inspect_odd_even_correction.ipynb  pedestal.json
attic/config/: make_config.py  nearline_config.json  nearline_config_run1015.json  nearline_config_run1309.json  nearline_config_run340.json  nearline_config_run436.json  nearline_config_run454.json  nearline_config_run476.json  nearline_config_run566.json  update_calibration_from_csv.py  update_mapping_from_csv.py
attic/config/attic/: nearline_config.json  nearline_config_run476.json
attic/config/detector_mapping/: convert_csv_to_json.py  mapping_run1015.csv  mapping_run1309.csv  mapping_run340.csv  mapping_run436.csv  mapping_run454.csv  mapping_run476.csv  mapping_run566.csv
attic/config/energy_calibration/: calibration_run340.csv
attic/database/: populate_channel_mapping_from_csv.py  populate_nearline_from_logs.py  populate_online_from_json.py  populate_slow_control_from_nonsense.py  table_structure.md  test_read_db.py  update_detector_json_from_csv.py
attic/energy_calibration/: check_energy_calibration.ipynb  cosmic_calib_306.json  cosmic_energy_calibration.ipynb  nearline_helpers.py
attic/fitting/: enable_disable_amc1300.sh  make_templates.ipynb  set_template_odb.sh  test_cpp_implementation.cc
attic/macros/: MakeGraphs.C
attic/plotting/: create_and_analyse_hodo_heatmap.ipynb  dump_traces_to_hist.ipynb  example_plotter.ipynb  example_plotter_sequencer.ipynb  inspect_integration_window.ipynb  multi_path_energy_calibration_comparison.ipynb  nearline_helpers.py  plot_17mev.ipynb  plot_cconstants_from_csv.ipynb  plot_integral_amplitude.ipynb  plot_led_events.ipynb  plot_led_lab_tests.ipynb  plot_nai.ipynb  rundata.py  runinstpect.py  test_drop_waveforms.ipynb  test_rf_subtraction.ipynb  test_simple_cluster.ipynb
attic/plotting/CENPA/: 17mev_calibrated.ipynb  cobolt_60.ipynb  compare_nearline_local.ipynb  debug_ground.ipynb  plot_integral_threshold_by_channel.ipynb  plot_intrinsics.ipynb  plot_led_calibration_run.ipynb  plot_waveforms.ipynb  prototype_peak_finding.ipynb  template_energy_slices.ipynb  test_clustering.ipynb  test_waveform_fitter.ipynb  test_waveform_integrator.ipynb
attic/python/: detector_mapping.json  detector_mapping_01837_00000.json  detector_mapping_01837_00000_swap_1_2.json  detector_mapping_swaps_11_19.json  example_non_linear.json
attic/scripts/: clear_midas_directory.sh  clear_midas_directory.sh_1  clear_nearline_directory.sh  diskSpaceWarning.sh  do_hadd.sh  example.cron  hadd_iteratively.py  midas_backup.sh  midas_backup.sh_1  midas_center_scan.msl  midas_diagonal_scan.msl  midas_fine_x_position_scan.msl  midas_fine_y_position_scan_xtal1_center.msl  muon_tomography.msl  process_run.sh  process_run_local.sh  psql_db_backup.sh  reprocess_nearline.sh  reprocess_nearline_custom_config.sh  run_nearline_automatic.sh  run_nearline_automatic_analysis_machine.sh  send_to_slack.sh
attic/serializer/: Serializer.cc  Serializer.hh
cmake/: Config.cmake.in
config/: nalu_data_config.json
examples/: analysis.ipynb  log.txt  setup.sh  simple_analysis.ipynb  simple_unpacker.C  simple_unpacker_C.d
include/common/data_products/: DataProduct.hh  LinkDef.h
include/common/unpacking/: BankUnpacker.hh  CollectionsHolder.hh  EventUnpacker.hh  LinkDef.h  Logger.hh  Parser.hh  PayloadUnpacker.hh  UnpackerHelpers.hh
include/data_products/: ChannelHeader.hh  DataProduct.hh  Waveform.hh  WaveformHeader.hh
include/nalu/data_products/: LinkDef.h  NaluEventFooter.hh  NaluEventHeader.hh  NaluODB.hh  NaluPacket.hh  NaluPacketFooter.hh  NaluPacketHeader.hh  NaluTime.hh  NaluWaveform.hh
include/nalu/unpacking/: ADBankUnpacker.hh  ADPayloadUnpacker.hh  ATBankUnpacker.hh  ATPayloadUnpacker.hh  LinkDef.h  NaluEventFooterParser.hh  NaluEventHeaderParser.hh  NaluEventUnpacker.hh  (+4 more)
include/parsers/: ChannelHeaderAsyncParser.hh  ChannelHeaderParser.hh  FC7HeaderParser.hh  WFD5HeaderParser.hh  WaveformHeaderAsyncParser.hh  WaveformHeaderParser.hh  WaveformParser.hh
include/unpackers/: BankUnpacker.hh  BasicEventUnpacker.hh  CRBankUnpacker.hh  CollectionsHolder.hh  EventUnpacker.hh  FC7Unpacker.hh  PayloadUnpacker.hh  WFD5Unpacker.hh
scripts/: build.sh  cleanup.sh  install.sh  setenv.sh  setenv.sh~  unpack.sh  unsetenv.sh
scripts/submodules/: build_submodules.sh
src/: CMakeLists.txt  main.cc  main_new.cc  main_old.cc
src/common/: CMakeLists.txt
src/common/data_products/: CMakeLists.txt  DataProduct.cc
src/common/unpacking/: BankUnpacker.cc  CMakeLists.txt  CollectionsHolder.cc  EventUnpacker.cc  Logger.cc  Parser.cc  PayloadUnpacker.cc  UnpackerHelpers.cc
src/data_products/: CMakeLists.txt  ChannelHeader.cc  Waveform.cc  WaveformHeader.cc
src/nalu/data_products/: CMakeLists.txt  NaluEventFooter.cc  NaluEventHeader.cc  NaluODB.cc  NaluPacket.cc  NaluPacketFooter.cc  NaluPacketHeader.cc  NaluTime.cc  NaluWaveform.cc
src/nalu/unpacking/: ADBankUnpacker.cc  ADPayloadUnpacker.cc  ATBankUnpacker.cc  ATPayloadUnpacker.cc  CMakeLists.txt  NaluEventFooterParser.cc  NaluEventHeaderParser.cc  NaluEventUnpacker.cc  NaluPacketFooterParser.cc  NaluPacketHeaderParser.cc  NaluPacketParser.cc  NaluTimeParser.cc
src/parsers/: CMakeLists.txt  ChannelHeaderAsyncParser.cc  ChannelHeaderParser.cc  WFD5HeaderParser.cc  WaveformHeaderAsyncParser.cc  WaveformHeaderParser.cc
src/unpackers/: BasicEventUnpacker.cc  CMakeLists.txt  CRBankUnpacker.cc  FC7Unpacker.cc  WFD5Unpacker.cc
src/utils/: CMakeLists.txt
